# scrum-ai-coach-home

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: action_plan.py  goal_suggestion.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FeedbackCard.css  FeedbackCard.jsx  Layout.css  Layout.jsx  LoginForm.jsx  Navbar.css  Navbar.jsx  RequireAuth.jsx  RequireRole.jsx  ReviseModal.css  ReviseModal.jsx  Sidebar.css  Sidebar.jsx
frontend/src/pages/: ActionPlan.css  ActionPlan.jsx  ActionProgress.css  ActionProgress.jsx  Dashboard.css  Dashboard.jsx  Feedback.css  Feedback.jsx  GoalSelection.jsx  Login.css  Login.jsx  Onboarding.css  Onboarding.jsx  ProgressDashboard.css  ProgressDashboard.jsx  Register.jsx  RegisterPage.css  RegisterPage.jsx  Settings.css  Settings.jsx  SkillAssessment.css  SkillAssessment.jsx  SkillProfile.jsx  Welcome.css  Welcome.jsx
frontend/src/services/: actionPlanApi.js  assessmentApi.js  authApi.js  settingsApi.js  skillProfileApi.js  supabaseAuth.js  supabaseClient.js
